Revert gradle and VectorUtilBenchmark changes